✨ Add game improvements and data collection system
🎮 Game Enhancements:
- Improved graphics with modern visual styling
- Continuous movement controls (smoother gameplay)
- Better input handling for keyboard controls
- Enhanced player and obstacle rendering

📊 Data Collection System:
- Automatic gameplay session recording
- Real-time data save during Human/AI mode
- Export APIs for YOLO and RL training datasets
- Training data statistics endpoint

📖 Documentation:
- Added comprehensive DATA_COLLECTION_GUIDE.md
- Updated README with data collection workflow
- Detailed instructions for Jeewon (YOLO) and Chloe (RL)
- Security notes for GCP credentials

🔒 Security:
- Enhanced .gitignore for GCP credentials
- Protected collected_data/ and training_exports/
- Ensured no sensitive information in Git

🚀 Files Changed:
- web_app/static/js/game_improved.js (new)
- web_app/training_data_collector.py (new)
- web_app/DATA_COLLECTION_GUIDE.md (new)
- web_app/app.py (integrated data collection)
- web_app/templates/index.html (improved UI)
- README.md (data collection section)
- .gitignore (GCP security)

--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,19 @@ models/
 *.onnx
 *.trt
 
+# GCP and Cloud credentials (⚠️ CRITICAL: NEVER COMMIT)
+*.json
+gcp-key*.json
+service-account*.json
+.gcp/
+.google/
+credentials/
+secrets/
+
+# Training data collected from web
+web_app/collected_data/
+web_app/training_exports/
+
 # Temporary files
 *.tmp
 *.temp
