--- a/web_app/game_dataset/data.yaml
+++ b/web_app/game_dataset/data.yaml
@@ -1,7 +1,13 @@
-names:
-- player
-- obstacle
-nc: 2
-path: /Users/jeewonkim/Desktop/2025-semi2/DeepForComputerVision/YOLO-You-Only-Live-Once/web_app/game_dataset
+# data.yaml
+
+
+
+# 1. folder structure 
 train: images/train
-val: images/train
+val: images/val  
+
+# 2. class setting
+nc: 2
+names:
+  - player
+  - obstacle
