🔧 Fix data.yaml to use relative path instead of absolute path
- Change path from absolute to relative (.) in data.yaml
- Ensures compatibility across different computer environments
- YOLO training will work regardless of project location

--- a/web_app/game_dataset/data.yaml
+++ b/web_app/game_dataset/data.yaml
@@ -5,6 +5,6 @@ names:
 - caution_lava
 - exist_lava
 nc: 5
-path: /Users/aidesigner/Columbia Univ Course/deeplearningvision4995/final_project/web_app/game_dataset
+path: .
 train: images/train
 val: images/train
