--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -4,10 +4,15 @@ FROM python:3.11-slim
 # Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# Install system dependencies (including OpenGL libraries for OpenCV)
 RUN apt-get update && apt-get install -y \
     gcc \
     curl \
+    libgl1 \
+    libglib2.0-0 \
+    libsm6 \
+    libxext6 \
+    libxrender-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Copy requirements and install Python dependencies
@@ -23,8 +28,8 @@ RUN useradd --create-home --shell /bin/bash app \
 USER app
 
 # Expose port (Cloud Run provides PORT env var)
+# Cloud Run will set PORT env var automatically
 EXPOSE 8080
-ENV PORT=8080
 
 # Health check (disabled for Cloud Run)
 # HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
