--- a/web_app/requirements.txt
+++ b/web_app/requirements.txt
@@ -8,6 +8,10 @@ python-engineio>=4.7.0
 numpy>=1.24.0
 Pillow>=9.0.0
 
+# Machine Learning dependencies
+torch>=2.0.0
+ultralytics>=8.0.0
+
 # Production server
 gunicorn>=21.0.0
 eventlet>=0.33.0
