--- a/YOLO_demo/test_models/YOLO-dataset-11221748/data.yaml
+++ b/YOLO_demo/test_models/YOLO-dataset-11221748/data.yaml
@@ -7,4 +7,4 @@ names:
 nc: 5
 path: /Users/jeewonkim/Desktop/2025-semi2/DeepForComputerVision/YOLO-You-Only-Live-Once/web_app/game_dataset
 train: images/train
-val: images/train
+val: images/val
