--- a/game_dataset/data.yaml
+++ b/game_dataset/data.yaml
@@ -5,6 +5,6 @@ names:
 - caution_lava
 - exist_lava
 nc: 5
-path: /Users/jooyeonlee/Project/Yolo_project/YOLO-You-Only-Live-Once/game_dataset
+path: .
 train: images/train
 val: images/train
